--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,3 +17,10 @@ spec:
         image: nanajanashia/argocd-app:1.1
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
