--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -9,6 +9,27 @@ metadata:
   creationTimestamp: null
   name: nginx-index-html-configmap
 ---
+apiVersion: v1
+data:
+  nginx_stub.conf: |
+    server {
+    listen       80;
+    server_name  localhost;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }    
+    
+    location /metrics {
+        stub_status;
+    }
+    }
+kind: ConfigMap
+metadata:
+  creationTimestamp: null
+  name: nginx-conf-configmap
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,8 +54,11 @@ spec:
           - containerPort: 80
         volumeMounts:
           - mountPath: /usr/share/nginx/html/index.html
-            name: nginx-conf
+            name: nginx-index
             subPath: index.html
+          - mountPath: /etc/nginx/conf.d/nginx_stub.conf
+            name: nginx-conf
+            subPath: nginx_stub.conf
         resources:
           requests:
             memory: "64Mi"
@@ -43,9 +67,12 @@ spec:
             memory: "128Mi"
             cpu: "500m"
       volumes:
-        - name: nginx-conf
+        - name: nginx-index
           configMap:
             name: nginx-index-html-configmap
+        - name: nginx-conf
+          configMap:
+            name: nginx-conf-configmap
 ---
 apiVersion: v1
 kind: Service
