--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -11,19 +11,19 @@ metadata:
 ---
 apiVersion: v1
 data:
-  nginx_stub.conf: |
+  default.conf: |
     server {
-    listen       80;
-    server_name  localhost;
+      listen       80;
+      server_name  localhost;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }    
-    
-    location /metrics {
-        stub_status;
-    }
+      location / {
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
+      }    
+      
+      location /metrics {
+          stub_status;
+      }
     }
 kind: ConfigMap
 metadata:
@@ -56,9 +56,9 @@ spec:
           - mountPath: /usr/share/nginx/html/index.html
             name: nginx-index
             subPath: index.html
-          - mountPath: /etc/nginx/conf.d/nginx_stub.conf
+          - mountPath: /etc/nginx/conf.d/default.conf
             name: nginx-conf
-            subPath: nginx_stub.conf
+            subPath: default.conf
         resources:
           requests:
             memory: "64Mi"
