nginx-exporter values file added

--- a/application.yaml
+++ b/application.yaml
@@ -54,3 +54,10 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: prometheus
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+    - ServerSideApply=true
+    automated:
+      selfHeal: true
+      prune: true
