--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -16,7 +16,7 @@ data:
       listen       80;
       server_name  localhost;
 
-      location / {
+      location /app {
           root   /usr/share/nginx/html;
           index  index.html index.htm;
       }    
