added app to both paths

--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -19,6 +19,11 @@ data:
       location /app {
           root   /usr/share/nginx/html;
           index  index.html index.htm;
+      }  
+
+      location / {
+          root   /usr/share/nginx/html;
+          index  index.html index.htm;
       }    
       
       location /metrics {
