--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -17,7 +17,7 @@ data:
       server_name  localhost;
 
       location /app {
-          root   /usr/share/nginx/html;
+          root   /usr/share/nginx/html/app;
           index  index.html index.htm;
       }  
 
@@ -59,6 +59,9 @@ spec:
           - containerPort: 80
         volumeMounts:
           - mountPath: /usr/share/nginx/html/index.html
+            name: nginx-index
+            subPath: index.html
+          - mountPath: /usr/share/nginx/html/app/index.html
             name: nginx-index
             subPath: index.html
           - mountPath: /etc/nginx/conf.d/default.conf
