added prometheus ingress to the same ALB

--- a/nginx-service/nginx-deployment-service.yaml
+++ b/nginx-service/nginx-deployment-service.yaml
@@ -129,3 +129,11 @@ spec:
               name: nginx-service
               port:
                 number: 80
+
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: prometheus-kube-prometheus-prometheus
+              port:
+                number: 9090
